Removed the use of ArrayList removeFirst and getFirst to make it backward compatible with previous Java versions.